# yt-dlp-gui

./: .cursorrules  Cargo.toml  README.md
src/: main.rs
