[package]
name = "ytmp3"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ytmp3"
path = "src/main.rs"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[dependencies]
eframe = "0.28"
egui = "0.28"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
regex = "1.0"
url = "2.0"
dirs = "5.0"
rfd = "0.12"

[profile.release]
# Optimize for size and performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Reduce binary size further
[profile.release.package."*"]
opt-level = 3
